[tool.poetry]
name = "keeper-bots"
version = "0.2.30"
description = "Keeper bots for Circuit protocol"
authors = ["CircuitDAO"]
license = "MIT"
readme = "README.md"
packages = [{include = "keeper_bots"}]

[tool.poetry.dependencies]
python = "~3.13"
httpx = {version = "^0.28.1", extras = ["http2"]}
python-dotenv = "^1.0.0"
autobahn = "^23.6.2"
chia-blockchain = "2.5.7"
zstandard = "^0.23.0"
service-identity = "^24.1.0"
circuit-cli = {git = "https://github.com/circuitdao/circuit-cli.git", branch = "main"}
#circuit-cli = {path = "../circuit-cli", develop = true}
coinbase-advanced-py = "^1.8.2"
python-json-logger = "^3.3.0"
python-okx-async = {git = "https://github.com/circuitdao/python-okx-async.git", branch = "master"}
#python-okx-async = {path = "../python-okx-async", develop = true}
apscheduler = "^3.11.0"
pytz = "^2025.2"
sortedcontainers = "^2.4.0"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
